--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 *{
     box-sizing: border-box;
+
 }
 .top-section{
     background-image: url(./image/background\ \(1\).png);
@@ -115,6 +116,9 @@ ul>li>a {
     display: flex;
     gap: 30px;
     justify-content: space-around;
+}
+.lol{
+    margin-left: 40px;
 }
 
 .only-image {
@@ -303,9 +307,8 @@ h5 {
         font-size: 20px;
         height: 100%;
         width: 100%;
-
-
     }
+
     .button-tag {
         display: flex;
         flex-direction: column;
@@ -356,6 +359,8 @@ h5 {
         flex-direction: column;
         align-items: center;
     }
+  
+ 
  /* three-part/logo */
     .only-image {
         display: flex;
@@ -472,6 +477,232 @@ margin-top: 10px;
     text-align: center;
     display: block;
     padding: 0px 5px;
+}
+
+}
+
+/* destop jono media screen */
+@media screen and (max-width:576px) {
+ 
+    .meow{
+        display: flex;
+        flex-direction: column;
+        
+        margin-left: 100px;
+    }
+    .nav-contanier {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
+    .nav{
+        display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
+    }
+   
+    .top-section {
+        display: flex;
+        flex-direction: column;
+        font-size: 18px;
+        height: 100%;
+        width: 100%;
+    }
+     
+
+    .button-tag {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+    }
+
+    .visit-card {
+        display: block;
+        margin-bottom: 30px;
+        width: 100%;
+        justify-items: center;
+    }
+
+    .main-part {
+        display: flex;
+        flex-direction: column;
+        padding-left: 10px;
+
+    }
+
+    .top-header {
+        display: flex;
+        flex-direction: column;
+        font-size: 20px;
+        height: 100%;
+        width: 100%;
+        gap: 10px;
+    }
+
+    /* second-part */
+
+    .main-part {
+         display: flex;
+        flex-direction: column;
+        padding-left: 10px;}
+         
+    
+  
+        
+    .text {
+        padding: 0 30px;
+    }
+
+    .image-part-3 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .lol{
+       display: flex;
+       flex-direction: column;
+      padding-left: 25px;
+    }
+/* three-part */
+
+.only-image {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.input-type {
+    display: block;
+   width: 100%; height: 200px;
+    margin-left: 70%;
+   margin-top: 10px;
+  padding: 5px 30px;
+}
+
+
+
+.main-image {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 60px;
+}
+
+.picture-part {
+    text-align: center;
+}
+
+.picture-part-2 {
+    text-align: center;
+}
+
+.image-section {
+    display: flex;
+    flex-direction: column;
+    padding: 0 30px;
+    height: 1000px;
+}
+
+
+ /* part-six */
+
+ .main-section {
+    margin-top: 1300px;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    padding: 2px 10px;
+    background-size: cover;
+}
+
+.second-main {
+    padding: 0 30px;
+    display: flex;
+    flex-direction: column;
+    background-size: cover;
+    background-repeat: no-repeat;
+    text-align: center;
+  
+}
+.from {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    width: 50px;
+    background-size: cover;
+    margin-top: 50px;
+    margin-left: 0px;
+}
+.baby{
+    width: 100%;
+    display: flex;
+   height: 100%;
+    padding: 5px 20px;
+    margin-left: 100px;
+
+}
+.from-style{
+    display: flex;
+    flex-direction: column;
+margin-left: 100px;
+}
+
+.pic-move {
+    width: 100%;
+    margin-bottom: 90px;
+}
+.second-image {
+    height: 100%;
+   
+}
+
+.first-image .second-image {
+    margin: 10px 0px;
+} 
+
+/* footer-part */
+last-part {
+
+gap: 10px;
+display: block;
+margin-right: 70px;
+
+}
+.footer-two {
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+padding: 5px 20px;
+margin-left: 2px;
+margin-top: 10px;
+
+}
+.footer-one {
+display: block;
+margin-top: 800px;
+margin-right: 30%;
+
+/* margin-right: 70px; */
+}
+
+.name {
+
+margin-top: 100px;
+
+}
+
+.icon {
+display: flex;
+gap: 15px;
+justify-content: center;
+
+}
+
+.logo-tag {
+text-align: center;
+display: block;
+padding: 0px 5px;
 }
 
 }
