--- a/style.css
+++ b/style.css
@@ -580,7 +580,7 @@ margin-top: 10px;
    width: 100%; height: 200px;
     margin-left: 70%;
    margin-top: 10px;
-  padding: 5px 30px;
+  padding: 5px 50px;
 }
 
 
@@ -641,13 +641,13 @@ margin-top: 10px;
     display: flex;
    height: 100%;
     padding: 5px 20px;
-    /* margin-left: 100px; */
+    margin-left: 100px;
 
 }
 .from-style{
     display: flex;
     flex-direction: column;
-/* margin-left: 100px; */
+margin-left: 100px;
 }
 
 .pic-move {
